# fruit-cnn-classifier

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  fruit-recognition-prompt.md  pyproject.toml  requirements.txt
api/: inference.py  main.py  requirements.txt
docs/: MILESTONES.md  MVP.md  SPEC.md  mimo-api.html  mimo-image.md  mimo-models.md  mimo-openai-api.md  mimo-welcome.html
frontend/: .env.example  index.html  netlify.toml  package-lock.json  package.json  server.ts  vite.config.ts
frontend/netlify/functions/: identify.mts  identify.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: FruitGallery.tsx  FruitResult.tsx  FunFact.tsx  GoodnessGuide.tsx  HeroSection.tsx  HeroUpload.tsx  LoadingPremium.tsx  LoadingState.tsx  ResultCard.tsx  SupportedFruitsModal.tsx  UploadZone.tsx
frontend/src/hooks/: usePrediction.ts
frontend/src/lib/: api.ts  types.ts
notebooks/: .gitkeep  train_on_colab.ipynb
src/: __init__.py
src/data/: __init__.py  fruit_dataset.py  make_dataset.py
src/evaluation/: __init__.py  evaluate.py  visualize.py
src/inference/: __init__.py
src/models/: __init__.py  cnn_model.py
src/training/: __init__.py  train.py  trainer.py
src/utils/: __init__.py  config.py  nutrition.py
webapp/: app.py  requirements.txt  utils.py
webapp/assets/: animations.js  style.css  theme.py
webapp/components/: __init__.py  fruit_gallery.py  nutrition.py  result.py  upload.py
