[project]
name = "fruit-recognition"
version = "0.1.0"
description = "水果识别与营养信息展示系统 — 人工智能基础期末大作业"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "scikit-learn>=1.3",
    "pillow>=10.0",
    "streamlit>=1.28",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "python-docx>=0.8",
    "python-pptx>=0.6",
    "jupyter>=1.0",
]

[dependency-groups]
dev = [
    "python-docx>=0.8",
    "python-pptx>=0.6",
    "jupyter>=1.0",
]
